--- a/exercise1/docker-compose.yaml
+++ b/exercise1/docker-compose.yaml
@@ -11,23 +11,60 @@ volumes:
 # Containers
 services:
 
-  # MariaDB database
-  db:
-    image: mariadb:11.2.4
-    container_name: mariadb
-    command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
+  # Nextcloud app
+  app:
+    image: nextcloud:27.1-fpm
+    container_name: app
     restart: always
     networks:
       - nextcloud
     volumes:
-      - db:/var/lib/mysql:Z
+      - nextcloud:/var/www/html:z
     environment:
-      - MYSQL_ROOT_PASSWORD
-      - MYSQL_USER
-      - MYSQL_PASSWORD
-      - MYSQL_DATABASE
-      - MARIADB_AUTO_UPGRADE
-      - MARIADB_DISABLE_UPGRADE_BACKUP
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
+      - POSTGRES_HOST
+      - REDIS_HOST
+      - OVERWRITEPROTOCOL
+      - OVERWRITEHOST
+      - TRUSTED_PROXIES
+      - APACHE_DISABLE_REWRITE_IP
+      - NEXTCLOUD_ADMIN_USER
+      - NEXTCLOUD_ADMIN_PASSWORD
+    depends_on:
+      - caddy
+      - db
+      - redis
+
+  # Cron job
+  cron:
+    image: nextcloud:29.0.3-fpm
+    container_name: cron
+    restart: always
+    networks:
+      - nextcloud
+    volumes:
+      - nextcloud:/var/www/html:z
+    entrypoint: /cron.sh
+    depends_on:
+      - db
+      - redis
+  
+  # PostgreSQL database
+  db:
+    image: postgres:16.3-alpine
+    container_name: postgres
+    restart: always
+    networks:
+      - nextcloud
+    volumes:
+      - db:/var/lib/postgresql/data:Z
+    environment:
+      - POSTGRES_DB
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_HOST
 
   # Redis cache
   redis:
@@ -36,30 +73,6 @@ services:
     restart: always
     networks:
       - nextcloud
-
-  # Nextcloud app
-  app:
-    image: nextcloud:29.0.3-fpm
-    container_name: app
-    restart: always
-    networks:
-      - nextcloud
-    volumes:
-      - nextcloud:/var/www/html:z
-    environment:
-      - MYSQL_USER
-      - MYSQL_PASSWORD
-      - MYSQL_DATABASE
-      - MYSQL_HOST
-      - REDIS_HOST
-      - OVERWRITEPROTOCOL
-      - OVERWRITEHOST
-      - TRUSTED_PROXIES
-      - APACHE_DISABLE_REWRITE_IP
-    depends_on:
-      - caddy
-      - db
-      - redis
 
   # Nginx web server
   web:
@@ -82,20 +95,6 @@ services:
     volumes:
       - nextcloud:/var/www/html:z,ro
       - ./web/nginx.conf:/etc/nginx/nginx.conf:ro
-
-  # Cron job
-  cron:
-    image: nextcloud:29.0.3-fpm
-    container_name: cron
-    restart: always
-    networks:
-      - nextcloud
-    volumes:
-      - nextcloud:/var/www/html:z
-    entrypoint: /cron.sh
-    depends_on:
-      - db
-      - redis
 
   # Caddy reverse proxy
   caddy:
